1.3.6:
    + Added elementaries on few Cards.
    + Four new Cards, Clementine, Dosbox, Freemind and Wine
    + Added Credits in About

1.3.5:
    * Changed size of the in-game About.
    * Changed font
    * Changed music
    * Some code and bug fixes
    + Added the About entry in the main Menu, to see all card's About

1.3:
	* Fix a bug where sound wasn't saved in the right way and then made the
	game crash.
	* Changed names: 
	    -listeCartes.py --> listOfCards.py
	    -cartes (listOfcards.py) --> allcards
	    -menu.py --> game.py
	* Create a 'Text' object to handle...text
		* Changed code in Menu.py and game.py to use Text objects instead of
		lists.
	* Few little fixes.
	* Started implementation of gettext to add translations. WIP
	+ Add an animation for a captured card.
	+ Add information about cards. Do a right-click on a card to see the About
	  pop-up.
	+ Add a sub-menu for future updates. Hot Seat is the only one working