@@ -2,6 +2,7 @@
     + Added elementaries on few Cards.
     + Four new Cards, Clementine, Dosbox, Freemind and Wine
     + Added Credits in About
+    + Added a new effect sound, when doing a clic on the Menu
 
 1.3.5:
     * Changed size of the in-game About.
